		4 and 5. This makes stage 2 of NFS polyomial selection
		hugely faster for very large problems
	- Allowed the target matrix density within NFS filtering to
		be specified from the demo binary (multiple people have
		asked for this and I'd been too lazy to supply it)
	- Modified the MPI code to flag in-place gather and scatter
		operations as such (thanks Greg Childers)
	- Fixed an erroneous error check in the MPI code (thanks
		Ilya Popovyan)
	- Fixed an MPI race condition in the Lanczos restart code
		(thanks Jeff Gilchrist)
	- Modified the NFS square root to print out factors as they are
		found (thanks Paul Leyland)

Version 1.48: 1/8/11
	- Performed a massive overhaul of the stage 1 NFS polynomial
		selection, with a huge amount of help from Jayson King.
		Once this is tuned a little better, polynomial selection
		should become massively faster, especially on CPUs.
		The GPU code is much simpler and more flexible now too
	- Added a fast MPI parallel all-against-all xor implementation
		courtesy of Ilya Popovyan
	- Added more cache size detection for Intel processors
	- Added a fix to prevent potential overflow in the hashtable code
	- Increased the maximum input size to 1024 bits
	- Changes from Brian Gladman:
	   - Corrected a bug in Windows win32 inline assembler code 
	   - Removed the unmaintained Visual Studioo 2008 build projects
	   - Updated Visual Studio 2010 CUDA build for NVIDIA Parallel
	       Nsight 1.5 and the CUDA 3.2 toolkit

Version 1.47: 9/18/10
	- Fixed several bugs in the linear algebra (thanks Serge
		Batalov and many mersenneforum testers)
	- Patches from Jayson King: tune some of the choices for NFS
		polynomial selection
	- Patches from Serge Batalov: fix some portability problems 
		dealing with the hodgepodge of zlib versions everybody
		has on their unix systems
	- Added a little optimization for Fermi GPUs
	- Patch from Brian Gladman: fix bad printf format string
	- Fixed other format string problems introduced in v1.46

