@@ -32,6 +32,10 @@ extern "C" {
 #define MSIEVE_MAJOR_VERSION 1
 #define MSIEVE_MINOR_VERSION 49
 
+#ifndef MSIEVE_SVN_VERSION
+#define MSIEVE_SVN_VERSION "unknown"
+#endif
+
 /* The final output from the factorization is a linked
    list of msieve_factor structures, one for each factor
    found. */
